# reverb-agent

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  pyproject.toml
chrome-extension/: background.js  content.js  manifest.json
docs/: README.md  hermes_integration_design.md
docs/superpowers/plans/: 2026-04-09-observer-framework.md  2026-04-09-project-setup.md  2026-04-10-agent-memory.md  2026-04-10-browser-feishu-observers.md  2026-04-10-ide-observers.md  2026-04-10-terminal-panel.md
docs/superpowers/specs/: 2026-04-09-pc-assistant-design.md  2026-04-10-terminal-panel.md
idea-plugin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
idea-plugin/src/main/kotlin/com/reverb/plugin/: ReverbBreakpointListener.kt  ReverbCopyPasteListener.kt  ReverbDocumentListener.kt  (+4 more)
src/hermes_mac/: __init__.py  __main__.py  cli.py  config.py  constants.py
src/hermes_mac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hermes_mac/agent/: __init__.py  loop.py  memory.py  skills.py
src/hermes_mac/observers/: __init__.py  base.py  browser.py  feishu.py  ide_observer.py  intellij.py  registry.py  system.py  vscode.py
src/reverb_agent/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging.py
src/reverb_agent/agent/: __init__.py  llm.py  loop.py  memory.py
src/reverb_agent/observers/: __init__.py  base.py  browser.py  events.py  feishu.py  ide_observer.py  intellij.py  registry.py  system.py  vscode.py
src/reverb_agent/ui/: __init__.py  panel.py  web_panel.py
tests/: test_config.py
