[project]
name = "hermes-mac"
version = "0.1.0"
description = "PC Personal Assistant with autonomous observation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
hermes-mac = "hermes_mac.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]