[project]
name = "reverb-agent"
version = "0.1.0"
description = "Personal AI assistant that learns from your work patterns"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
reverb = "reverb_agent.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]